[project]
name = "tama4u"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "nfcpy==1.0.4",
    "rich>=14.3.3",
    "ruff>=0.15.7",
    "typer>=0.24.1",
]

[project.scripts]
tama4u = "tama4u.__main__.app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing-trailing-comma
    "CPY001",   # Missing copyright notice at top of file
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D104",     # Missing docstring in public package
    "D103",     # Missing docstring in public function
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in `__init__`
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "ASYNC109", # Async function definition with a `timeout` parameter
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "ARG001",   # Unused argument
    "E722",     # Do not use bare `except`
]
pylint = { max-args = 10, max-statements = 60 }
mccabe = { max-complexity = 12 }
